--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
-mainClassName = "Game"
+mainClassName = "gameInterface.Main"
 
 run {
     standardInput = System.in
