--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,12 @@ run {
     standardInput = System.in
 }
 
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.47'
 }
